For the synonyms 'more' popup on the species page, correct the cursor so it is again a pointer (hand).
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1158 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1283,6 +1283,9 @@ a.enlarge:hover {
 #taxon dl {
     line-height: 1.7em;
 }
+#taxon a.more {
+    cursor: pointer;
+}
 
 /*///////////////////////////**
 Getting Started Page Styles
