Clean up a few places in the code that still had /simple/ in URL paths.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1171 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/index.html
+++ b/gobotany/core/templates/index.html
@@ -12,7 +12,7 @@
           Best characters in each pile, ranked by
           entropy, coverage, and observability
       </a></li>
-      <li><a href="simple/">Simple Key app</a></li>
+      <li><a href="/">Simple Key app</a></li>
       <li id="tests-action">Run Tests (please run in dojo debug mode, see the buildout README.txt for more details)</li>
     </ul>
 
