--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -11,7 +11,7 @@
                     <p><a href="{% url simplekey-page 1 %}"
                           >Plant Identifier</a> |
                         <a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a> |
-                        <a href="/simple/advanced/">Advanced ID Tools</a> |
+                        <a href="/advanced/">Advanced ID Tools</a> |
                         <a href="#">About</a></p>
                     <h6>Legal</h6>
                     <p><a href="#">Privacy Policy</a> |
