--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -1,11 +1,12 @@
     <header>
         <div class="container">
-            <!--Branding-->
-            <h2><a href="/">New England Wild Flower Society</a></h2>
-            <h1><a href="/">Go Botany features thousands of native
-                New England plants for you to learn and explore</a></h1>
-
-            <!--Navigation-->
+            <h2><a 
+                {% ifnotequal request.path "/" %}href="/"{% endifnotequal %}>New
+                England Wild Flower Society</a></h2>
+            <h1><a 
+                {% ifnotequal request.path "/" %}href="/"{% endifnotequal %}>Go
+                Botany features thousands of native New England plants for you
+                to learn and explore</a></h1>
             <nav>
                 <div id="search">
                     <form id="search-suggest" action="/search" autocomplete="off">
@@ -20,7 +21,7 @@
                 </div>
                 <ul>
                     <li class="home">
-                        <a href="{% url simplekey-index %}">Home</a>
+                        <a {% ifnotequal request.path "/" %}href="{% url simplekey-index %}"{% endifnotequal %}>Home</a>
                     </li>
                     <li class="plant-id">
                         <a href="{% if 'skip_help_start' in request.COOKIES.keys and request.COOKIES.skip_help_start == 'y' %}{% url simplekey-page 1 %}{% else %}/help/start/{% endif %}">Plant Identifier</a>
@@ -35,5 +36,5 @@
                 <div class="clearit"></div>
             </nav>
             <div class="clearit"></div>
-        </div><!--Closes .container-->
+        </div>
     </header>
