--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -2,7 +2,8 @@
 {% load simplekey_extras %}
 {% load thumbnail %}
 
-{% block title %}{{ scientific_name }}{% endblock %}
+{% block title %}{{ scientific_name }} 
+({% for common_name in taxon.common_names.all %}{% if not forloop.first %}, {% endif %}{{ common_name }}{% endfor %}){% endblock %}
 
 {% block js_top %}
     <!-- SVGWeb script - must be first, must have data-path.
