--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -77,7 +77,9 @@
                         <div class="plant-list">
                         </div>
 
-                        <p><a href="#">See a list of all <span class="species-count">...</span> plants in this group.</a></p>
+                        <p class="list-all"><a href="#">See a list of all 
+                            <span class="species-count">...</span> matching
+                            species.</a></p>
 
                     </div><!--closes #main-->
 
