--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -631,58 +631,67 @@ Level 3 Id styles
 --------*****/
 div.show {
     float: right;
-    margin: -3px 0 7px 0; /*0 0 10px 0;*/ /* JG adjust due to Dijit menu widget */
+    margin: -3px 0 7px 0; /* adjusted due to Dijit menu widget */
 }
 
-div.genus {
-    padding: 11px;
-    margin: 0;
+div.row {
     border-top: 1px solid #e1e1dc;
     border-right: 1px solid #e1e1dc;
     border-left: 1px solid #e1e1dc;
+    margin: 0;
+    padding: 0;
     text-align: center;
 }
 
-div.genus.odd {
-    background: #fff;
-}
-div.genus.even {
-    background: #cce5af;
-}
-div.genus.last {
+div.row.last {
     border-bottom: 1px solid #e1e1dc;
 }
-.genus .row {
-    margin: 0 0 15px 0;
-}
-.genus .row.last {
-    margin: 0 0 0 0;
-}
-.genus .plant {
+.row .plant {
     position: relative;
     float: left;
-    margin: 0 15px 0 0;
+    margin: 0;
+    padding: 10px 8px; 
     width: 160px; /* prevent long names from blowing out layout; allow wrap */
 }
-.genus .plant.last {
-    margin: 0 0 0 0;
+.row .plant.first {
+    padding-left: 10px;
 }
-.genus .plant .frame {
-    position: absolute;
-    width: 150px;
-    height: 139px;
+.row .plant.last {
+    padding-right: 10px;
+}
+
+.row .plant.genus1 {
+    background: #fff;
+}
+.row .plant.genus2 {
+    background: #d4e8bc; /* halfway between g3 and g5 */
+}
+.row .plant.genus3 {
+    background: #e2f0d3; /* halfway between g1 and g5 */
+}
+.row .plant.genus4 {
+    background: #eff5e9; /* halfway between g1 and g3 */
+}
+.row .plant.genus5 {
+    background: #cce5af;
+}
+
+.row .plant .frame {
     border: 5px solid rgba(255, 255, 255, 0.8);
+    height: 139px;
+    position: absolute;
+    top: 10px;
+    width: 150px;
     z-index: 100;
-    top: 0;
 }
-.genus .plant a {
+.row .plant a {
     display: block;
     color: #1a2e11;
 }
-.genus .plant a:hover {
+.row .plant a:hover {
     color: #6eae3e;
 }
-.genus .plant .img-container {
+.row .plant .img-container {
     width: 160px;
     height: 149px;
     overflow: hidden;
@@ -697,7 +706,10 @@ div.genus.last {
     display: block;
     font-style: italic;
 }
-
+p.list-all {
+    clear: left;
+    padding-top: 2em;
+}
 /***
 Sidebar Styles for 3rd Level
 ****/
