Make result background color take up entire vertical area even when adjacent results' names push out to three lines.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1186 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -647,10 +647,11 @@ div.show {
     border-bottom: 1px solid #e1e1dc;
 }
 .plant-list .row .plant {
-    position: relative;
     float: left;
+    height: 205px;
     margin: 0;
-    padding: 10px 8px; 
+    padding: 10px 8px;
+    position: relative;
     width: 160px; /* prevent long names from blowing out layout; allow wrap */
 }
 .plant-list .row .plant.first {
